# RustScan

./: BENCHMARKS.md  Cargo.toml  README.md
benches/: scan_bench.rs
src/: cli.rs  collect.rs  lib.rs  main.rs  matching.rs  output.rs  pattern.rs  pipeline.rs  result.rs  search.rs  traverse.rs  utils.rs
tests/: benchmark_scan.rs  integration_cli.rs  parallel_regression.rs
