[package]
name = "rustscan"
version = "0.1.0"
edition = "2024"
description = "Fast recursive regex file search CLI"
readme = "README.md"

[lib]
name = "rustscan"
path = "src/lib.rs"

[[bin]]
name = "rustscan"
path = "src/main.rs"

[[bench]]
name = "scan_bench"
harness = false

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rayon = "1.12.0"
regex = "1.12.4"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
